# goit-pyweb-hw-12

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_old  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
storage/: data.json
templates/: error.html  index.html  message.html
